# naivebayes.hs

./: ChangeLog.md  Main.hs  NaiveBayes.hs  README.md  Setup.hs  naivebayes-hs.cabal  naivebayes.hs.cabal
src/: Main.hs  NaiveBayes.hs
